--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="flex flex-col items-center justify-center min-h-screen w-full p-4">  
   <router-outlet />
 </div>
+<app-pwa-install></app-pwa-install>
+<app-notification-prompt></app-notification-prompt>
