--- a/src/app/components/exercise-set-info/exercise-set-info.component.html
+++ b/src/app/components/exercise-set-info/exercise-set-info.component.html
@@ -6,7 +6,7 @@
     </div>
     <div>
       <p class="font-medium text-gray-700">Exercises</p>
-      <p>{{ exerciseCount() }} exercises</p>
+      <p>{{ totalExercises() }} exercises</p>
     </div>
   </div>
 </div>
