--- a/src/app/pages/training-set/parts/sport-break/sport-break.component.html
+++ b/src/app/pages/training-set/parts/sport-break/sport-break.component.html
@@ -14,7 +14,7 @@
         <div>
           <app-exercise-details-card
             [exerciseName]="title(currentExercise().index)"
-            [durationSeconds]="currentExercise().goal.duration"            
+            [durationSeconds]="7"
           />
         </div>
 
@@ -22,14 +22,10 @@
         <div class="flex flex-col items-center justify-center py-6">
           <app-timer
             [remainingMs]="timesMsRemaining()"
-            [totalSeconds]="currentExercise().goal.duration"
+            [totalSeconds]="7"
           />
           <div class="w-full max-w-xs mx-auto mt-4">
-            <app-exercise-controls
-              [state]="'active'"
-              (pause)="pauseExercise()"
-              (resume)="resumeExercise()"
-            />
+            <app-exercise-controls [state]="'prepare'" />
           </div>
         </div>
 
