--- a/src/app/pages/training-set/training-set.component.html
+++ b/src/app/pages/training-set/training-set.component.html
@@ -11,5 +11,10 @@
 
   } @else if (asRecoveryState(state)){
   <app-sport-break [state]="state"></app-sport-break>
+  } @else if (asFinishedState(state)) {
+  <app-sport-complete [state]="state"></app-sport-complete>
+  } @else if (asActiveClickState(state)) {
+  <app-sport-clicker [state]="state" (finish)="finishExercise()" />
+
   } }
 </div>
