--- a/src/app/pages/training-set/parts/sport-timer/sport-timer.dumb.component.html
+++ b/src/app/pages/training-set/parts/sport-timer/sport-timer.dumb.component.html
@@ -29,6 +29,7 @@
               [state]="'active'"
               (pause)="pauseExercise()"
               (resume)="resumeExercise()"
+              (finish)="finish.emit()"
             />
           </div>
         </div>
