--- a/src/app/pages/training-set/parts/sport-break/sport-break.component.html
+++ b/src/app/pages/training-set/parts/sport-break/sport-break.component.html
@@ -15,6 +15,7 @@
           <app-exercise-details-card
             [exerciseName]="title(currentExercise().index)"
             [durationSeconds]="7"
+            [preparing]="true"
           />
         </div>
 
@@ -25,7 +26,7 @@
             [totalSeconds]="7"
           />
           <div class="w-full max-w-xs mx-auto mt-4">
-            <app-exercise-controls [state]="'prepare'" />
+            <app-exercise-controls [state]="'prepare'" (finish)="finish.emit()" />
           </div>
         </div>
 
