refactor: update exercise state handling and improve pause/resume functionality

--- a/src/app/pages/training-set/parts/sport-timer/sport-timer.dumb.component.html
+++ b/src/app/pages/training-set/parts/sport-timer/sport-timer.dumb.component.html
@@ -26,7 +26,7 @@
           />
           <div class="w-full max-w-xs mx-auto mt-4">
             <app-exercise-controls
-              [state]="'active'"
+              [state]="state().state.isPaused ? 'pause' : 'active'"
               (pause)="pauseExercise()"
               (resume)="resumeExercise()"
               (finish)="finish.emit()"
