--- a/src/app/pages/training-set/parts/sport-prepare/sport-prepare.component.html
+++ b/src/app/pages/training-set/parts/sport-prepare/sport-prepare.component.html
@@ -1,4 +1,6 @@
-<div class="relative px-4 bg-white shadow-xl sm:rounded-3xl sm:p-20 w-full h-full">
+<div
+  class="relative px-4 bg-white shadow-xl sm:rounded-3xl sm:p-20 w-full h-full"
+>
   <div class="max-w-md mx-auto">
     <div class="divide-y divide-gray-200">
       <div
@@ -23,7 +25,11 @@
         <div class="flex flex-col items-center justify-center py-6">
           <app-timer [remainingMs]="timesMsRemaining()" [totalSeconds]="7" />
           <div class="w-full max-w-xs mx-auto mt-4">
-            <app-exercise-controls [state]="'prepare'" (finish)="finish.emit()" />
+            <app-exercise-controls>
+              <app-exercise-control-button (click)="start.emit()">
+                Start
+              </app-exercise-control-button>
+            </app-exercise-controls>
           </div>
         </div>
 
