feat: implement sport timer component and integrate workout completion handling

--- a/src/app/pages/training-set/training-set.component.html
+++ b/src/app/pages/training-set/training-set.component.html
@@ -1,19 +1,19 @@
 <div class="w-full h-full flex-1">
   @if(workoutState(); as state) { @if(asActivestate(state)) {
-  <app-sport-timer-dumb
+  <app-sport-timer
     [state]="state"
     (start)="startExercise()"
     (pause)="pauseExercise()"
     (resume)="resumeExercise()"
     (finish)="finishExercise()"
-  ></app-sport-timer-dumb>
+  ></app-sport-timer>
   } @else if (asPrepareState(state)) {
   <app-sport-prepare [state]="state" (finish)="finishExercise()"></app-sport-prepare>
 
   } @else if (asRecoveryState(state)){
   <app-sport-break [state]="state" (finish)="finishExercise()"></app-sport-break>
   } @else if (asFinishedState(state)) {
-  <app-sport-complete [state]="state" (finish)="finishExercise()"></app-sport-complete>
+  <app-sport-complete [state]="state" (exit)="exitExerciseSet()"></app-sport-complete>
   } @else if (asActiveClickState(state)) {
   <app-sport-clicker [state]="state" (finish)="finishExercise()" />
 
