feat: add current streak display to exercise set overview component

--- a/src/app/components/exercise-set-overview/exercise-set-overview.component.html
+++ b/src/app/components/exercise-set-overview/exercise-set-overview.component.html
@@ -18,6 +18,15 @@
       {{ estimatedTime() }} min
     </div>
     
+    <div class="flex items-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" [class]="currentStreak() > 0 ? 'text-green-500' : 'text-gray-400'" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+      </svg>
+      <span [class]="currentStreak() > 0 ? 'text-green-600 font-medium' : 'text-gray-500'">
+        {{ currentStreak() }} day streak
+      </span>
+    </div>
+    
     @if (timesPerDay()) {
       <div class="flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1 text-amber-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
