--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -32,7 +32,7 @@
     <!-- Sport selection -->
     <section>
       @for (item of workouts(); track $index) {
-        <app-exercise-set-overview (clicked)="openExercise(item.id)" class="w-full" [title]="item.title" [description]="item.description" [estimatedTime]="item.duration"></app-exercise-set-overview>
+        <app-exercise-set-overview (clicked)="openExercise(item.id)" class="w-full" [title]="item.title" [description]="item.description" [estimatedTime]="item.duration" [currentStreak]="item.currentStreak"></app-exercise-set-overview>
       }
     </section>
   }
