--- a/src/app/pages/training-set/parts/sport-recovery/sport-recovery.component.html
+++ b/src/app/pages/training-set/parts/sport-recovery/sport-recovery.component.html
@@ -24,12 +24,18 @@
           <app-timer [remainingMs]="timesMsRemaining()" [totalSeconds]="7" />
           <div class="w-full max-w-xs mx-auto mt-4">
             <app-exercise-controls>
-              <app-exercise-control-button (click)="start.emit()">
+              <app-exercise-control-button (pressed)="start.emit()">
                 Start
               </app-exercise-control-button>
-              <app-exercise-control-button (click)="pause.emit()">
+              @if (isPaused()) {
+              <app-exercise-control-button (pressed)="resumeExercise()">
+                Resume
+              </app-exercise-control-button>
+              } @else {
+              <app-exercise-control-button (pressed)="pauseExercise()">
                 Pause
               </app-exercise-control-button>
+              }
             </app-exercise-controls>
           </div>
         </div>
