--- a/src/app/components/exercise-controls/exercise-control-button/exercise-control-button.component.html
+++ b/src/app/components/exercise-controls/exercise-control-button/exercise-control-button.component.html
@@ -1,7 +1,7 @@
 <button
-  (click)="click.emit()"
+  (click)="onClick()"
   [disabled]="disabled()"
   class="px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors"
 >
-  <slot></slot>
+  <ng-content></ng-content>
 </button>
